<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Pokemon Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="addNew">Add New</string>
    <string name="pc">Profile Card</string>
    <string name="about">About</string>
    <string name="theVersion">Version 1.0</string>
    <string name="logoItem">MG Logo</string>
    <string name="theDeveloper">Developer: Devona Ward</string>
    <string name="theList">Captured</string>
    <string name="cs">Coming Soon</string>
    <string name="pCap">Pokemon Captured</string>
    <string name="aNap">New Pokemon Captured</string>
    <string name="pcTitle">Pokemon Trainer Profile</string>
    <string name="imageName">attach image</string>
    <string name="shareFB">Facebook Share</string>
    <string name="ok">Save</string>
    <string name="theUN">Username:</string>
    <string name="theFC">Friend Code:</string>
    <string name="unHint">MadGeek1289</string>
    <string name="codeNum">2178</string>
    <string name="theFP">Favorite Pokemon:</string>
    <string name="myP">Charizard</string>
    <string name="avSelect">Avatar Selection</string>
    <string name="avDemo">defaultImage</string>
    <string name="img1">img1</string>
    <string name="img2">img2</string>
    <string name="img3">img3</string>
    <string name="img4">img4</string>
    <string name="img5">img5</string>
    <string name="img6">img6</string>
    <string name="img7">img7</string>
    <string name="img8">img8</string>
    <string name="img9">img9</string>
    <string name="helpTxt">Help Info</string>
    <string name="pokemonType">Select Pokemon Type:</string>
    <string name="thePokemon">Select Pokemon:</string>
    <string name="lvlNumber">Enter a Level Number:</string>
    <string name="selectD">Select Date</string>
    <string-array name="theTypes">
        <item>Normal</item>
		<item>Fighting</item>
		<item>Rock</item>
		<item>Fire</item>
		<item>Poison</item>
		<item>Ghost</item>
		<item>Water</item>
		<item>Ground</item>
		<item>Dragon</item>
		<item>Electric</item>
		<item>Flying</item>
		<item>Dark</item>
		<item>Grass</item>
		<item>Psychic</item>
		<item>Steel</item>
		<item>Ice</item>
		<item>Bug</item>
		<item>Fairy</item>
    </string-array>
    

</resources>
